kubernetes/deploy/home/media/slskd/clusters/bastion/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: slskd
spec:
  selector:
    app.kubernetes.io/name: slskd
  ports:
    - name: http
      port: 5030
      targetPort: http
      protocol: TCP
