kubernetes/deploy/home/media/slskd/clusters/bastion/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - slskd
  rules:
    - host: slskd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slskd
                port:
                  name: http
